# fhir-to-lakehouse

./: .bandit.yml  .dockerignore  .gitignore  .isort.cfg  .mega-linter.yml  .release-please-manifest.json  .releaserc.json  .renovaterc.json  .trivyignore  .yamllint.yml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  compose.trino.yaml  compose.yaml  pyproject.toml  release-please-config.json  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  test.sql
.github/workflows/: ci.yaml  lint-pr-title.yaml  release-please.yaml  schedule.yaml  scorecard.yaml
data/: bundles.ndjson  generate-sample-data.sh  synthea.properties
fhir_to_lakehouse/: fhir_to_lakehouse.py
src/: bundle_processor.py  lakehousekeeper.py  main.py  metrics.py  server_to_lakehouse.py  settings.py
tests/: test_bundle_processor.py
tests/fixtures/resources/: delete-single-patient.json
tests/integration/: README.md  check-counts.sql  kind-config.yaml  test_deployment_in_k8s.py
tests/integration/fixtures/: Chart.yaml  kind-config.yaml  values.yaml
tests/integration/fixtures/files/: spark-defaults.conf
tests/integration/fixtures/templates/: akhq-kafka-user.yaml  kafka-topic.yaml  kafka.yaml  spark-defaults-cm.yaml
tests/unit/: test_bundle_processor.py  test_lakehousekeeper.py
tests/unit/fixtures/resources/: single-patient.json
tests/unit/fixtures/resources/batches/put-and-delete/: delete-1.json  put-0.json  put-1.json  put-2-newer.json  put-2.json
