[project]
name = "fhir-to-lakehouse"
version = "1"
description = "Reads FHIR bundles from Kafka, encodes them using the Pathling encoders, and stores them as Delta Lake tables."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathling==9.5.0",
    "delta-spark==4.1.0",
    "typed-settings[attrs]==25.3.0",
    "loguru==0.7.3",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "tenacity==9.1.4",
    "tomli==2.4.0",
    "click==8.3.1",
    "deltalake[pyarrow]==1.5.0",
    "boto3==1.42.74",
]

[dependency-groups]
dev = [
    "kafka-python==2.3.0",
    "pandas==3.0.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "testcontainers[minio]==4.14.2",
    "ruff==0.15.7",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
