[project]
name = "fhir-to-lakehouse"
version = "1"
description = "Reads FHIR bundles from Kafka, encodes them using the Pathling encoders, and stores them as Delta Lake tables."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathling==9.6.0",
    "delta-spark==4.2.0",
    "typed-settings[attrs]==25.3.0",
    "loguru==0.7.3",
    "opentelemetry-api==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "tenacity==9.1.4",
    "tomli==2.4.1",
    "click==8.3.3",
    "deltalake[pyarrow]==1.5.1",
    "boto3==1.42.95",
]

[dependency-groups]
dev = [
    "kafka-python==2.3.1",
    "pandas==3.0.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "testcontainers[minio]==4.14.2",
    "ruff==0.15.11",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
