[project]
name = "fhir-to-lakehouse"
version = "1"
description = "Reads FHIR bundles from Kafka, encodes them using the Pathling encoders, and stores them as Delta Lake tables."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathling==9.8.0",
    "delta-spark==4.3.0",
    "typed-settings[attrs]==25.3.0",
    "loguru==0.7.3",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-prometheus==0.62b1",
    "tenacity==9.1.4",
    "tomli==2.4.1",
    "click==8.4.1",
    "deltalake[pyarrow]==1.6.0",
    "boto3==1.43.34",
]

[dependency-groups]
dev = [
    "kafka-python==2.3.2",
    "pandas==3.0.3",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "testcontainers[minio]==4.14.2",
    "ruff==0.15.18",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
